Bug 183708 - stroke properties aren't remembered between path creations
Summary: stroke properties aren't remembered between path creations
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-beta
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-08 17:50 UTC by Elián Hanisch
Modified: 2009-02-24 20:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2009-02-08 17:50:54 UTC
Version:           svn trunk (using KDE 4.1.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-23-generic
Installed from:    Ubuntu Packages

1. select freehand or create path tool
2. draw a path
3. in the stroke properties docker, change the stroke width
4. draw a new path
5. the new path will have previous width
Comment 1 Elián Hanisch 2009-02-18 02:19:01 UTC
related or duplicate of bug #165869?
Comment 2 Cyrille Berger 2009-02-18 09:25:16 UTC
No, 165869 is about the widget of the docker getting visible, not the content of the options.
Comment 3 Sven Langkamp 2009-02-22 22:51:30 UTC
I'm not sure if it's really a bug or the behavior is intended. This is a Karbon tool, so I move the bug there.
Comment 4 Jan Hambrecht 2009-02-24 20:01:40 UTC
SVN commit 931087 by jaham:

when changing stroke properties save them to the canvas resource provider
so it can be used when drawing with the pencil tool or when creating paths

BUG:183708



 M  +9 -2      karbon/plugins/tools/KarbonPencilTool.cpp  
 M  +2 -1      karbon/plugins/tools/KarbonPencilTool.h  
 M  +17 -0     libs/flake/KoCanvasResourceProvider.cpp  
 M  +9 -0      libs/flake/KoCanvasResourceProvider.h  
 M  +2 -0      libs/flake/KoLineBorder.h  
 M  +3 -2      libs/flake/tools/KoCreatePathTool.cpp  
 M  +3 -0      plugins/dockers/strokedocker/StrokeDocker.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=931087