when changing stroke properties save them to the canvas resource provider so it can be used when drawing with the pencil tool or when creating paths

BUG:183708


svn path=/trunk/koffice/; revision=931087